# time_server

./: README.md
docs/: bom.md  staging.md
src/python/: .coverage  .flake8  .gitignore  Dockerfile  README.md  battery-temp-sensor.py  dev.sh  docker-compose-simple.yml  docker-compose.yml  manage.py  pyproject.toml
src/python/api/: documentation.py  ds18b20_sensor.py  ds18b20_views.py  renogy_views.py  serializers.py  urls.py  views.py
src/python/api/migrations/: 0001_initial.py
src/python/apps/common/: __init__.py
src/python/apps/common/models/: __init__.py
src/python/apps/common/serializers/: __init__.py
src/python/apps/common/views/: __init__.py  documentation.py
src/python/apps/ds18b20_sensors/: __init__.py  apps.py  sensor.py  urls.py  views.py
src/python/apps/renogy_devices/: __init__.py  apps.py  device.py  urls.py  views.py
src/python/apps/time_management/: apps.py  models.py  serializers.py  urls.py  views.py
src/python/apps/time_management/migrations/: 0001_initial.py
src/python/docs/: API_USAGE_EXAMPLES.md  CODE_DOCUMENTATION_GUIDE.md  LINTING_DISABLE_EXAMPLES.md  POETRY_SCRIPTS.md  PROJECT_STRUCTURE.md  RENOGY_MODULE_DOCUMENTATION.md  REST_API_DOCUMENTATION.md  SWAGGER_UI_DOCUMENTATION.md
src/python/scripts/: __init__.py  db.py  deploy.py  dev.py  docker.py
src/python/tests/unit/: test_api_views.py  test_device_sensor_advanced.py  test_ds18b20.py  test_renogy.py  test_serializers.py  test_time_management.py  test_view_coverage.py
src/python/time_server/: asgi.py  settings.py  urls.py  wsgi.py
